# api_test_shakeys

./: .gitignore  Dockerfile  README.md  data_loader.py  main.py  pyproject.toml  sqlite_db.py  wiki_parser.py
province/: provinces.py
region/: regions.py
user/: users.py
